--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "${workspaceFolder}/.aloisioimoveis/bin/python"
+    "python.pythonPath": "C:\\Users\\Thinker\\AppData\\Local\\Programs\\Python\\Python35\\python.exe"
 }
